--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-native-screens": "^3.29.0",
     "react-native-status-bar-height": "^2.6.0",
     "react-native-toast-message": "^2.2.0",
+    "react-native-uuid": "^2.0.1",
     "react-native-vector-icons": "^10.0.3",
     "react-redux": "^9.1.0",
     "redux": "^5.0.1",
